updated contact and portfolio html and css

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="well col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <div class="well col-lg-8 col-md-8 col-sm-12 col-xs-12 mainBody">
                 <!--Large column on the left - start-->
 
                 <div class="page-header">
@@ -75,20 +75,22 @@
             <!--Large column on the left - end-->
 
 
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 connectBox">
                 <!--Small column on the right - start-->
                 <div class="panel panel-default">
                     <div class="panel-heading">Connect with Me</div>
                     <div class="panel-body">
-                        <a href="#">
-                            <img class="iconPictures" src="assets/images/githubicon.png" alt="Github link">
-                        </a>
-                        <a href="#">
-                            <img class="iconPictures" src="assets/images/linkedicon.png" alt="LinkedIn link">
-                        </a>
-                        <a href="#">
-                            <img class="iconPictures" src="assets/images/stackicon.png" alt="stackoverflow link">
-                        </a>
+                        <div class="icons">
+                            <a href="#">
+                                <img class="iconPictures" src="assets/images/githubicon.png" alt="Github link">
+                            </a>
+                            <a href="#">
+                                <img class="iconPictures" src="assets/images/linkedicon.png" alt="LinkedIn link">
+                            </a>
+                            <a href="#">
+                                <img class="iconPictures" src="assets/images/stackicon.png" alt="stackoverflow link">
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -106,7 +108,7 @@
             <p>Lisa Vinson 2017</p>
 
         </div>
-    </nav>
+            </nav>
 
 </body>
 
