--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,89 @@
 </head>
 
 <body>
+   <!--Navigation Bar: 1 row)-->
+   <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Lisa Vinson</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="index.html">About Me</a>
+                </li>
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact Me</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="well col-lg-8 col-md-8 col-sm-12 col-xs-12 mainBody">
+                <!--Large column on the left - start-->
+
+                <div class="page-header">
+                    <h1 class="main-header">Contact</h1>
+                </div>
+
+                <form>
+                    <div class="form-group">
+                            <label for="name">Name:</label>
+                            <input type="name" class="form-control" id="name" placeholder="Enter name" name="name">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                    </div>
+
+                    <textarea class="form-control" rows="3"></textarea>
+                    <br>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                        
+            </div>
+            <!--Large column on the left - end-->
 
 
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 connectBox">
+                <!--Small column on the right - start-->
+                <div class="panel panel-default">
+                    <div class="panel-heading">Connect with Me</div>
+                    <div class="panel-body">
+                        <div class="icons">
+                            <a href="#">
+                                <img class="iconPictures" src="assets/images/githubicon.png" alt="Github link">
+                            </a>
+                            <a href="#">
+                                <img class="iconPictures" src="assets/images/linkedicon.png" alt="LinkedIn link">
+                            </a>
+                            <a href="#">
+                                <img class="iconPictures" src="assets/images/stackicon.png" alt="stackoverflow link">
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+            <!--Small column on the right - end-->
 
+        </div>
+        <!--End row-->
 
+    </div>
+    <!--End container-->
 
-    
+    <nav class="navbar navbar-default footer">
+        <div class="continer-fluid">
+            <p>Lisa Vinson 2017</p>
+
+        </div>
+            </nav>
+
 </body>
 </HTML>
