Updated 3 html files, and completed css updates

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <!-- Include any google fonts or Bootstrap Templates here -->
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
@@ -24,13 +25,13 @@
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="index.html">About Me</a>
+                    <a class="pageLinks" href="index.html">About Me</a>
                 </li>
                 <li>
-                    <a href="portfolio.html">Portfolio</a>
+                    <a class="pageLinks" href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact Me</a>
+                    <a class="pageLinks" href="contact.html">Contact Me</a>
                 </li>
             </ul>
         </div>
@@ -46,26 +47,20 @@
                 </div>
 
                 <div class="pull-left">
-                    <img id="profilePic" src="assets/images/profilepic1.jpg" alt="profile picture">
+                    <img id="profilePic" class="img-responsive" src="assets/images/profilepic1.jpg" alt="profile picture">
                 </div>
 
                 <div>
                     <p class="para1">I am a native Floridian, born and raised in Orlando. After graduating from the University of Florida,
-                        I briefly moved to Baton Rouge, LA where I taught high school math before relocating to Charlotte,
-                        NC. While there, I worked in HR as a recruiting coordinator and client delivery manager. I recently
-                        relocated back to Orlando to spend time with family. PLACEHOLDER: Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit. Aenean sollicitudin in mauris sit amet tempor. Nullam et auctor enim. Fusce eget
-                        nunc augue. Sed rutrum erat quis odio egestas mattis. Etiam sodales posuere neque, vel semper leo
-                        feugiat ac. Praesent eleifend sollicitudin maximus. Mauris in auctor diam, hendrerit auctor turpis.
-                        Aenean aliquet facilisis leo, eu feugiat orci suscipit quis. Quisque ligula arcu, egestas nec dui
-                        a, cursus sollicitudin orci. Nullam auctor metus et tellus posuere semper. Maecenas varius enim arcu,
-                        sit amet aliquam orci vehicula non. Ut et augue convallis, viverra turpis quis, finibus nisl. Aliquam
-                        porta ante vitae elementum aliquam. Duis blandit suscipit ullamcorper. </p>
-
-                    <p class="para2">In my free time, I enjoy my fair share of both outdoor and indoor activities. I love to hike, kayak,
+                        I briefly moved to Baton Rouge, LA where I worked as high school teacher, teaching Geometry and Financial Math.
+                        In 2013, I relocated to Charlotte, NC. While there, I worked in human resources as a recruiting coordinator and later as a
+                        client delivery manager. 
+                        
+                        <p class="para2">I recently relocated back to Orlando to spend time with family and to study to become a full
+                        stack web developer. In my free time, I enjoy my fair share of both outdoor and indoor activities. I love to hike, kayak,
                         and take road trips to any place with delicious food (so far, St. Louis has the best barbecue, in
-                        my opinion). I also enjoy flag football, where I usually play receiver. I also enjoy weekend binge
-                        watching sessions and I am currently making my way through a list of some of the top anime shows.
+                        my opinion). I also enjoy playing flag football, where I usually play receiver and cornerback. I also enjoy weekend binge
+                        watching sessions. Currentl, I am making my way through a list of some of the top anime shows.
                         </p>
 
                 </div>
@@ -78,19 +73,19 @@
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 connectBox">
                 <!--Small column on the right - start-->
                 <div class="panel panel-default">
-                    <div class="panel-heading">Connect with Me</div>
+                    <div class="panel-heading connectHead">Connect with Me</div>
                     <div class="panel-body">
-                        <div class="icons">
-                            <a href="#">
-                                <img class="iconPictures" src="assets/images/githubicon.png" alt="Github link">
-                            </a>
-                            <a href="#">
-                                <img class="iconPictures" src="assets/images/linkedicon.png" alt="LinkedIn link">
-                            </a>
-                            <a href="#">
-                                <img class="iconPictures" src="assets/images/stackicon.png" alt="stackoverflow link">
-                            </a>
-                        </div>
+                        <div class="icons"></div>
+                        <a href="https://github.com/LiVinson">
+                            <img class="iconPictures" src="assets/images/githubicon.png" alt="Github link">
+                        </a>
+                        
+                        <a href="https://www.linkedin.com/in/lisavinson1">
+                            <img class="iconPictures" src="assets/images/linkedicon.png" alt="LinkedIn link">
+                        </a>
+                        <a href="https://stackoverflow.com/users/7484108/li-vinson?tab=profile">
+                            <img class="iconPictures" src="assets/images/stackicon.png" alt="stackoverflow link">
+                        </a>
                     </div>
                 </div>
 
@@ -104,7 +99,7 @@
     <!--End container-->
 
     <nav class="navbar navbar-default footer">
-        <div class="continer-fluid">
+        <div class="container-fluid">
             <p>Lisa Vinson 2017</p>
 
         </div>
