minor updates to link styling, icons

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                         <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
                     </div>
 
-                    <textarea class="form-control" rows="3"></textarea>
+                    <textarea class="form-control" rows="6"></textarea>
                     <br>
                     <button type="submit" class="btn btn-default submitButton">Submit</button>
                 </form>
@@ -70,14 +70,14 @@
                         <div class="panel-body">
                             <div class="icons"></div>
                             <a href="https://github.com/LiVinson">
-                                <img class="iconPictures" src="assets/images/githubicon.png" alt="Github link">
+                                <img class="iconPictures github" src="assets/images/githubicon.png" alt="Github link">
                             </a>
                             
                             <a href="https://www.linkedin.com/in/lisavinson1">
-                                <img class="iconPictures" src="assets/images/linkedicon.png" alt="LinkedIn link">
+                                <img class="iconPictures linkedin" src="assets/images/linkedicon.png" alt="LinkedIn link">
                             </a>
                             <a href="https://stackoverflow.com/users/7484108/li-vinson?tab=profile">
-                                <img class="iconPictures" src="assets/images/stackicon.png" alt="stackoverflow link">
+                                <img class="iconPictures stack" src="assets/images/stackicon.png" alt="stackoverflow link">
                             </a>
                         </div>
                     </div>
@@ -92,11 +92,11 @@
     <!--End container-->
 
     <nav class="navbar navbar-default footer">
-        <div class="container-fluid">
-            <p>Lisa Vinson 2017</p>
-
-        </div>
-            </nav>
+            <div class="container-fluid">
+                <p class="copyright">Copyright &#169; 2017 Lisa Vinson</p>
+    
+            </div>
+        </nav>
 
 </body>
 </HTML>
