--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
 
                 <div>
                     <p class="para1">I am a native Floridian, born and raised in Orlando. After graduating from the University of Florida,
-                        I briefly moved to Baton Rouge, LA where I worked as high school teacher, teaching Geometry and Financial Math.
-                        In 2013, I relocated to Charlotte, NC. While there, I worked in human resources as a recruiting coordinator and later as a
-                        client delivery manager. 
-                        
-                        <p class="para2">I recently relocated back to Orlando to spend time with family and to study to become a full
-                        stack web developer. In my free time, I enjoy my fair share of both outdoor and indoor activities. I love to hike, kayak,
-                        and take road trips to any place with delicious food (so far, St. Louis has the best barbecue, in
-                        my opinion). I also enjoy playing flag football, where I usually play receiver and cornerback. I also enjoy weekend binge
-                        watching sessions. Currentl, I am making my way through a list of some of the top anime shows.
+                        I briefly moved to Baton Rouge, LA where I worked as high school teacher, teaching Geometry and Financial
+                        Math. In 2013, I relocated to Charlotte, NC. While there, I worked in human resources as a recruiting
+                        coordinator and later as a client delivery manager.
+
+                        <p class="para2">I recently relocated back to Orlando to spend time with family and to study to become a full stack
+                            web developer. In my free time, I enjoy my fair share of both outdoor and indoor activities.
+                            I love to hike, kayak, and take road trips to any place with delicious food (so far, St. Louis
+                            has the best barbecue, in my opinion). I also enjoy playing flag football, where I usually play
+                            receiver and cornerback. I also enjoy weekend binge watching sessions. Currentl, I am making
+                            my way through a list of some of the top anime shows.
                         </p>
 
                 </div>
@@ -77,14 +78,14 @@
                     <div class="panel-body">
                         <div class="icons"></div>
                         <a href="https://github.com/LiVinson">
-                            <img class="iconPictures" src="assets/images/githubicon.png" alt="Github link">
+                            <img class="iconPictures github" src="assets/images/githubicon.png" alt="Github link">
                         </a>
-                        
+
                         <a href="https://www.linkedin.com/in/lisavinson1">
-                            <img class="iconPictures" src="assets/images/linkedicon.png" alt="LinkedIn link">
+                            <img class="iconPictures linkedin" src="assets/images/linkedicon.png" alt="LinkedIn link">
                         </a>
                         <a href="https://stackoverflow.com/users/7484108/li-vinson?tab=profile">
-                            <img class="iconPictures" src="assets/images/stackicon.png" alt="stackoverflow link">
+                            <img class="iconPictures stack" src="assets/images/stackicon.png" alt="stackoverflow link">
                         </a>
                     </div>
                 </div>
@@ -100,10 +101,10 @@
 
     <nav class="navbar navbar-default footer">
         <div class="container-fluid">
-            <p>Lisa Vinson 2017</p>
+            <p class="copyright">Copyright &#169; 2017 Lisa Vinson</p>
 
         </div>
-            </nav>
+    </nav>
 
 </body>
 
